deploy/ci/infrastructure.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci
  labels:
    istio-injection: disabled
